public/style/style.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
body{
    background-color: black;
}
#app{
    /*width: 100vw;*/
    max-width: 1920px;
    height: 100vh;
    overflow: hidden;
    margin-inline: auto;
}

#ui{
    width: 100%;
    max-width: 1920px;
    aspect-ratio: 2 / 1;
    height: 100%;
    max-height: 960px;
    /*background-color: rgb(255, 0, 0, 0.5);*/
    position: absolute;
    top: 0;
    pointer-events: none;
    overflow: hidden;
}

#inventaire{
    width: 20%;
    max-height: 100vh;
    position: absolute;
    right: 0;
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    align-items: flex-start;
    gap: 2em;
    overflow-y: scroll;
    pointer-events: auto;
    padding-top: 2em;
    margin-bottom: 10em;
    opacity: 50%;
    scrollbar-width: none;
    padding-right: 20px;
}

#inventaire:hover{
    opacity: 100%;
}

#inventaire::-webkit-scrollbar{
    display: none;
}

.inventory-object{
    width: 150px;
    height: 150px;
    height: 10em;
    background: url("../sprites/Object_BG.png");
    background-size: contain;
    display: flex;
    justify-content: center;
    align-items: center;
}

.object-image{
    width: 80%;
}

#pause{
    width: 100vw;
    height: 100vh;
    background-color: rgb(0, 0, 0, 0.3);
    position: absolute;
    z-index: 10;
    flex-direction: column;
    justify-content: center;
}

#pause p{
    width: 100%;
    height: 20%;
    background-color: rgb(0, 0, 0, 0.5);
    color: white;
    font-size: 5em;
    display: flex;
    justify-content: center;
    align-items: center;
}

#unlock-window{
    width: 100vw;
    height: 100vh;
    /*background-color: grey;*/
    position: absolute;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

#unlock-bloc{
    width: 40%;
    height: 20%;
    background-color: black;
    color: white;
    padding: 2em;
}

.unpaused{
    display: none;
}

.paused{
    display: flex;
}

